--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "firebase": "^10.7.1",
+    "firebase": "^10.14.1",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.20.1",
-    "reactflow": "^11.10.1"
+    "reactflow": "^11.10.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
